--- a/src/assets/styles/pages/_product-detail-one.scss
+++ b/src/assets/styles/pages/_product-detail-one.scss
@@ -9,5 +9,8 @@ $root-block-name: '.product-detail-one';
     &--red {
       color: #eb4335;
     }
+    &--blue {
+      color: #2a88cb;
+    }
   }
 }
