--- a/src/assets/styles/pages/_fhome.scss
+++ b/src/assets/styles/pages/_fhome.scss
@@ -29,12 +29,24 @@ $root-block-name: '.fhome';
       align-items: center;
       justify-content: center;
       gap: 8px;
+      cursor: pointer;
+      transition: transform 0.3s ease, color 0.3s ease;
+
+      &:hover {
+        color: #1d5e91;
+        transform: scale(1.1);
+      }
     }
 
     &-icon {
       display: flex;
       align-items: center;
       font-size: 18px;
+      transition: transform 0.3s ease;
+
+      &:hover {
+        transform: scale(1.2);
+      }
     }
   }
 
@@ -86,16 +98,26 @@ $root-block-name: '.fhome';
     display: flex;
     align-items: center;
     position: relative;
+
     &-icon {
       width: 38px;
       height: 38px;
     }
+
     &-text {
       margin: 0 20px;
       font-size: 20px;
       font-weight: 500;
       color: #2a88cb;
+      cursor: pointer;
+      transition: color 0.3s ease, transform 0.3s ease; // 添加過渡效果
+
+      &:hover {
+        color: #1d5e91;
+        transform: scale(1.1);
+      }
     }
+
     &::after {
       content: '';
       display: block;
@@ -110,8 +132,14 @@ $root-block-name: '.fhome';
       bottom: 0;
       font-size: 10px;
       font-weight: 500;
-
       color: #2a88cb;
+      cursor: pointer;
+      transition: color 0.3s ease, transform 0.3s ease; // 添加過渡效果
+
+      &:hover {
+        color: #1d5e91;
+        transform: scale(1.1);
+      }
     }
   }
 }
