--- a/src/assets/styles/pages/_mall-product.scss
+++ b/src/assets/styles/pages/_mall-product.scss
@@ -297,8 +297,8 @@ $root-block-name: '.mall-product';
     margin-top: 48px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
     gap: 24px;
+    grid-auto-rows: min-content;
   }
 
   &__linkItem {
