--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -14,6 +14,7 @@
 @import 'components/product-card';
 @import 'components/product-card2';
 @import 'components/slider';
+@import 'components/news-banner-slider';
 @import 'components/breadcrumbs';
 @import 'components/m-select';
 @import 'components/m-input';
