--- a/src/assets/styles/components/frontend/dialog/_animate-dialog.scss
+++ b/src/assets/styles/components/frontend/dialog/_animate-dialog.scss
@@ -81,6 +81,9 @@ $root-block-name: '.animateDialog';
       width: 652px;
       max-width: max-content;
     }
+    &-hide {
+      display: none;
+    }
   }
   &__icon {
     width: 100%;
