--- a/src/assets/styles/pages/backend/_productManagement.scss
+++ b/src/assets/styles/pages/backend/_productManagement.scss
@@ -5,6 +5,13 @@ $root-block-name: '.productDataManagement';
   $p__text: #{$p}__text;
   $p__btn: #{$p}__btn;
 
+  &__search {
+    width: 100%;
+    height: 50px;
+    padding: 14px 20px;
+    border-radius: 8px;
+    border: 1px solid #d4d4d4;
+  }
   &__title {
     color: #6b9fd2;
     font-size: 20px;
